// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connect Factory for bindings should component receive rules prop with all combined rules 1`] = `
Object {
  "css": ".a {
    padding: 2
}

.b {
    font-size: 16
}

.c {
    color: red
}",
  "html": "<div><div><span class=\\"a\\"></span><span class=\\"c b\\"></span></div></div>",
}
`;

exports[`Connect Factory for bindings should compose styles 1`] = `
Object {
  "css": ".a {
    padding: 2
}

.b {
    color: red
}

.c {
    font-size: 16
}",
  "html": "<div><span class=\\"a\\"></span><span class=\\"b c\\"></span></div>",
}
`;

exports[`Connect Factory for bindings should extend the rule properties 1`] = `
Object {
  "css": ".a {
    padding: 2
}

.b {
    color: red
}

.c {
    font-size: 16
}",
  "html": "<div><span class=\\"a\\"></span><span class=\\"b c\\"></span></div>",
}
`;

exports[`Connect Factory for bindings should not pass through "theme" prop when used without "ThemeProvider" 1`] = `
Object {
  "css": ".a {
    padding: 1
}

.b {
    color: red
}",
  "html": "<div color=\\"red\\"><span class=\\"a\\"></span><span class=\\"b\\"></span></div>",
}
`;

exports[`Connect Factory for bindings should process rules and create classNames 1`] = `
Object {
  "css": ".a {
    padding: 1
}

.b {
    color: red
}",
  "html": "<div><span class=\\"a\\"></span><span class=\\"b\\"></span></div>",
}
`;

exports[`Connect Factory for bindings should process rules and create classNames with rules as function 1`] = `
Object {
  "css": ".a {
    padding: 1
}

.b {
    color: red
}",
  "html": "<div><span class=\\"a\\"></span><span class=\\"b\\"></span></div>",
}
`;

exports[`Connect Factory for bindings should provide rules prop for connected component which is an object with rules in the values of fields 1`] = `
Object {
  "css": ".a {
    padding: 1
}

.b {
    color: red
}",
  "html": "",
}
`;
